Modify classname to avoid bootstrap collision

--- a/src/scss/klaro.scss
+++ b/src/scss/klaro.scss
@@ -134,7 +134,7 @@ $fullWidth: 1024px;
 
             @include make-modal(800px, 640px);
 
-            .hide   {
+            .hide-modal   {
                 border: none;
                 background: none;
                 svg {
